# hgalloc

./: .clang-format  CMakeLists.txt  CMakeLists.txt.in  FourByteScopedPtr.h  GrowingGlobalPoolAllocator.h  GrowingGlobalPoolAllocator_impl.h  LICENSE  README.md
test/: perfGrowingGlobalPoolAllocator.cpp  testFourByteScopedPtr.cpp  testGrowingGlobalPoolAllocator.cpp  testGrowingGlobalPoolAllocatorAssertions.cpp
